--- a/client/index.html
+++ b/client/index.html
@@ -57,8 +57,16 @@
         
         <tfoot>
         </tfoot>
-        <script src="./js/index.js"></script>
     </table>
-    
+    <script src="./js/app/models/Negociacao.js"></script>
+    <script>
+        let n1 = new Negociacao();
+        n1.quantidade = 10;
+        console.log(n1);
+
+        let n2 = new Negociacao();
+        n2.quantidade = 20;
+        console.log(n2);
+    </script>
 </body>
 </html>
